--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^20.8.2"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "zod": "^3.22.4"
   }
 }
